cabal-version:      2.4
name:               haskess
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskess
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Bitboard
                    , FEN
                    , GameState
                    , Move
                    , NNUE
                    , Play
                    , Eval
                    , MoveGeneration
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    extra-lib-dirs:   .
    extra-libraries:  nnueprobe
    build-depends:    base >=4.8
                    , vector >= 0.12.1.2 && < 0.13
    hs-source-dirs:   app
    default-language: Haskell2010
